# example-app-cmake-microchip

./: .gitignore  README.md  west.yml
.github/workflows/: build.yml
.komment/: .gitkeep
app/: CMakeLists.txt  CMakePresets.json  Kconfig  prj.conf  sample.yaml
app/boards/: README.md
app/confs_overlays/: atsame54_xpro_mcuboot_partitions.overlay  cdc_acm_uart.conf  cdc_acm_uart.overlay  mcuboot.conf  mcuboot.overlay  thread_analysis.conf
app/confs_overlays/bootloader/: atsame54_xpro_bootloader.conf  atsame54_xpro_bootloader.overlay  cdc_acm_logging_recovery.conf
app/src/: main.c  usb_cdc_acm_logging.c
boards/arm/pic32cx_sg41_cultra/: Kconfig.board  Kconfig.defconfig  pic32cx_sg41_cultra-pinctrl.dtsi  pic32cx_sg41_cultra.dts  pic32cx_sg41_cultra.yaml  pic32cx_sg41_cultra_defconfig
boards/arm/pic32cx_sg41_cultra/support/: openocd.cfg
scripts/: example_west_command.py  save_config.py  zephyr_cmake_utils.cmake
tests/lib/custom_lib/: testcase.yaml
